tests/errors/ty_label_err/ty_label_err.c
#error ty_label_err.ty_label_err:5:21 PARSE ERROR: Expected ')' (5:21)
#error ty_label_err.ty_label_err:5:23 PARSE ERROR: Expected an expression (5:23)
#error ty_label_err.ty_label_err:7:1 PARSE ERROR: Expected eof (7:1)
#error ty_label_err.ty_label_err:7:1 PARSE ERROR: Expected an expression (7:1)
